--- a/Tracker/ru.lproj/Localizable.stringsdict
+++ b/Tracker/ru.lproj/Localizable.stringsdict
@@ -13,11 +13,14 @@
             <key>NSStringFormatValueTypeKey</key>
             <string>d</string>
             <key>one</key>
-            <string>%d day</string>
+            <string>%d день</string>
+            <key>few</key>
+            <string>%d дня</string>
+            <key>many</key>
+            <string>%d дней</string>
             <key>other</key>
-            <string>%d days</string>
+            <string>%d дней</string>
         </dict>
     </dict>
 </dict>
 </plist>
-
