--- a/Tracker/ru.lproj/Localizable.strings
+++ b/Tracker/ru.lproj/Localizable.strings
@@ -28,7 +28,8 @@
 "CreateNewCategory_screenTitleString" = "Новая категория";
 "CreateNewCategory_categoryNamePlaceholderString" = "Введите название категории";
 "CreateNewCategory_doneButtonString" = "Готово";
-"CreateNewTracker_screenTitleString" = "Новая привычка";
+"CreateNewTracker_createScreenTitleString" = "Новая привычка";
+"CreateNewTracker_editScreenTitleString" = "Редактирование привычки";
 "CreateNewTracker_trackerNameTextFieldString" = "Введите название трекера";
 "CreateNewTracker_categoryButtonString" = "Категория";
 "CreateNewTracker_scheduleButtonString" = "Расписание";
@@ -36,6 +37,7 @@
 "CreateNewTracker_colorHeaderString" = "Цвет";
 "CreateNewTracker_cancelButtonString" = "Отменить";
 "CreateNewTracker_createButtonString" = "Создать";
+"CreateNewTracker_saveButtonString" = "Сохранить";
 "TabBar_trackersTabBarTitle" = "Трекеры";
 "TabBar_statisticsTabBarTitle" = "Статистика";
 "SearchBar_placeholder" = "Поиск";
