--- a/Tracker/ru.lproj/Localizable.strings
+++ b/Tracker/ru.lproj/Localizable.strings
@@ -13,22 +13,40 @@
 "friday" = "Пятница";
 "saturday" = "Суббота";
 "sunday" = "Воскресенье";
+
+"TrackersMainScreen_NavBarTitle" = "Трекеры";
+"TrackersMainScreen_EmptyStateView" = "Что будем отслеживать?";
+"TrackersMainScreen_SearchBarPlaceholder" = "Поиск";
+"TrackersMainScreen_FiltersButton" = "Фильтры";
+"TrackersMainScreen_PinnedSection" = "Закрепленные";
+"TrackersMainScreen_NothingFound" = "Ничего не найдено";
+
+"TrackerContextMenu_PinTracker" = "Закрепить";
+"TrackerContextMenu_UnpinTracker" = "Открепить";
+"TrackerContextMenu_EditTracker" = "Редактировать";
+"TrackerContextMenu_DeleteTracker" = "Удалить";
+
 "ChooseTrackerType_eventButtonText" = "Нерегулярное событие";
 "ChooseTrackerType_habitButtonText" = "Привычка";
 "ChooseTrackerType_screenTitleString" = "Создание трекера";
+
 "ScheduleScreen_doneButtonString" = "Готово";
 "ScheduleScreen_screenTitleString" = "Расписание";
-"emptyStateViewString" = "Что будем отслеживать?";
-"navBarTitleString" = "Трекеры";
-"Filters_Button" = "Фильтры";
+
 "onboardingDoneButtonString" = "Вот это технологии!";
 "screen1LabelString" = "Отслеживайте только то, что хотите";
 "screen2LabelString" = "Даже если это не литры воды и йога";
+
+"TabBar_trackersTabBarTitle" = "Трекеры";
+"TabBar_statisticsTabBarTitle" = "Статистика";
+
 "CategoryScreen_addCategoryButtonString" = "Добавить категорию";
 "CategoryScreen_screenTitleString" = "Категория";
+
 "CreateNewCategory_screenTitleString" = "Новая категория";
 "CreateNewCategory_categoryNamePlaceholderString" = "Введите название категории";
 "CreateNewCategory_doneButtonString" = "Готово";
+
 "CreateNewTracker_createScreenTitleString" = "Новая привычка";
 "CreateNewTracker_editScreenTitleString" = "Редактирование привычки";
 "CreateNewTracker_trackerNameTextFieldString" = "Введите название трекера";
@@ -39,9 +57,7 @@
 "CreateNewTracker_cancelButtonString" = "Отменить";
 "CreateNewTracker_createButtonString" = "Создать";
 "CreateNewTracker_saveButtonString" = "Сохранить";
-"TabBar_trackersTabBarTitle" = "Трекеры";
-"TabBar_statisticsTabBarTitle" = "Статистика";
-"SearchBar_placeholder" = "Поиск";
+
 "FilterTrackersScreen_Title" = "Фильтры";
 "FilterTrackersScreen_AllTrackers" = "Все трекеры";
 "FilterTrackersScreen_TodayTrackers" = "Трекеры на сегодня";
